# Substrate-seminar-example

./: Cargo.toml  README.md  lib.rs  package.json  redspot.config.ts  tsconfig.json
contracts/usd_token/: Cargo.toml  lib.rs
contracts/wrapped_usd/: Cargo.toml  lib.rs
impls/: deposit.rs  mod.rs  usd_token.rs  withdraw.rs  wrapped_usd.rs
tests/: helpers.ts
tests/setup/: chai.ts
tests/usd_token/: usd_token.tests.ts
tests/wrapper/: wrapper.tests.ts
traits/: deposit.rs  mod.rs  usd_token.rs  withdraw.rs  wrapped_usd.rs
